# dtc

./: BUILD.gn  LICENSE  METADATA
hafnium_inc/: stdlib.h  string.h
libfdt/: fdt_rw.c  libfdt.h
peregrine_inc/: stdlib.h  string.h
